--- a/scss/_varibles.scss
+++ b/scss/_varibles.scss
@@ -1,1 +1,6 @@
 @import url(https://db.onlinewebfonts.com/c/07a38bbad54db72a40b406bed1c72f53?family=Gotham+Pro+Regular);
+
+$pr-color: #ED3729;
+$info-color: #909090;
+$sub-info-color: #202020;
+$title-color: #000000;
