--- a/scss/main.css
+++ b/scss/main.css
@@ -270,10 +270,13 @@ body {
 
 .hero {
   padding: 35px 0;
+}
+.hero .container {
   position: relative;
 }
 .hero__img {
   width: 100%;
+  position: relative;
 }
 .hero__swiper-btn button {
   border: none;
@@ -283,12 +286,12 @@ body {
   position: absolute;
 }
 .hero__swiper-btn button:nth-child(1) {
-  top: 170px;
-  left: 55px;
+  top: 140px;
+  left: 0;
 }
 .hero__swiper-btn button:nth-child(2) {
-  top: 170px;
-  right: 55px;
+  top: 140px;
+  right: 0;
 }
 .hero__swiper-btn button:hover {
   opacity: 0.9;
@@ -438,5 +441,253 @@ body {
 @media screen and (max-width: 1158px) {
   .header-category .container {
     gap: 10px;
+  }
+}
+.offers__text-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+.offers__text-wrapper h1 {
+  font-weight: 400;
+  font-size: 24px;
+  color: #202020;
+}
+.offers__text-wrapper a {
+  font-weight: 400;
+  font-size: 16px;
+  color: #909090;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.offers__text-wrapper a img {
+  margin-top: 3px;
+}
+.offers__cards-wrapper {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 35px;
+  margin-top: 40px;
+  padding-bottom: 20px;
+}
+.offers__cards-wrapper__card {
+  border: 1px solid #F2F2F2;
+  padding: 16px 16px 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+.offers__cards-wrapper__card::after {
+  content: "-3%";
+  width: 40px;
+  height: 40px;
+  background: #ED3729;
+  border-radius: 50%;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 15px;
+  right: 23px;
+  font-weight: 400;
+  font-size: 14px;
+}
+.offers__cards-wrapper__card__price-wrap {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.offers__cards-wrapper__card__price-wrap .before-price {
+  font-weight: 400;
+  font-size: 14px;
+  text-decoration: line-through;
+  color: #9e9d9d;
+}
+.offers__cards-wrapper__card__price-wrap .lin-price {
+  width: 2px;
+  height: 10px;
+  background: #909090;
+  display: block;
+}
+.offers__cards-wrapper__card__price-wrap .sale-price {
+  font-weight: 600;
+  font-size: 18px;
+  color: #ED3729;
+}
+.offers__cards-wrapper__card__title {
+  width: 234px;
+  font-weight: 700;
+  font-size: 16px;
+  color: #000000;
+  line-height: 24px;
+  text-align: center;
+  padding: 10px 0;
+}
+.offers__cards-wrapper__card__info {
+  font-weight: 400;
+  font-size: 14px;
+  color: #909090;
+}
+.offers__cards-wrapper__card__time {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  margin-top: 10px;
+  padding: 10px 0;
+}
+.offers__cards-wrapper__card__time .tim {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  position: relative;
+}
+.offers__cards-wrapper__card__time .tim:nth-child(1)::before {
+  content: "";
+  width: 1px;
+  height: 24px;
+  background: #E0E0E0;
+  position: absolute;
+  left: 45px;
+  top: 3px;
+}
+.offers__cards-wrapper__card__time .tim:nth-child(2)::before {
+  content: "";
+  width: 2px;
+  height: 24px;
+  background: #E0E0E0;
+  position: absolute;
+  left: 53px;
+  top: 3px;
+}
+.offers__cards-wrapper__card__time .tim:nth-child(3)::before {
+  content: "";
+  width: 2px;
+  height: 24px;
+  background: #E0E0E0;
+  position: absolute;
+  left: 53px;
+  top: 3px;
+}
+.offers__cards-wrapper__card__time .tim span {
+  font-weight: 400;
+  font-size: 10px;
+  color: #909090;
+}
+.offers__cards-wrapper__card__time .tim .num {
+  font-weight: 400;
+  font-size: 16px;
+  color: #202020;
+}
+.offers__cards-wrapper__card__btns {
+  display: flex;
+  align-items: center;
+  gap: 50px;
+  margin-top: 30px;
+}
+.offers__cards-wrapper__card__btns button {
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+.offers__cards-wrapper__card__btns button svg path {
+  fill: #fff;
+  stroke: #BDBDBD;
+  transition: all 0.3s ease;
+}
+.offers__cards-wrapper__card__btns button svg circle {
+  fill: #fff;
+  stroke: #BDBDBD;
+  transition: all 0.1s ease;
+}
+.offers__cards-wrapper__card__btns button:hover svg path {
+  fill: red;
+  stroke: red;
+}
+.offers__cards-wrapper__card__btns button:hover svg circle {
+  stroke: red;
+}
+.offers__cards-wrapper__card__btns button:last-child svg path {
+  fill: #fff;
+  stroke: #BDBDBD;
+  stroke-width: 6px;
+  transition: all 0.3s ease;
+}
+.offers__cards-wrapper__card__btns button:last-child:hover svg path {
+  fill: red;
+  stroke: red;
+}
+.offers__cards-wrapper__card__btns .card-btns-lin {
+  width: 2px;
+  height: 24px;
+  background: #F2F2F2;
+  display: block;
+}
+.offers__cards-wrapper__card .btns-linia {
+  width: 100%;
+  height: 1px;
+  background: #F2F2F2;
+  display: block;
+  position: absolute;
+  bottom: 50px;
+}
+
+@media screen and (max-width: 1235px) {
+  .offers__cards-wrapper {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (max-width: 1001px) {
+  .offers__cards-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .offers__text-wrapper h1 {
+    font-size: 17px;
+  }
+  .offers__text-wrapper a {
+    font-size: 13px;
+  }
+}
+@media screen and (max-width: 676px) {
+  .offers__cards-wrapper__card__price-wrap .before-price {
+    font-size: 11px;
+  }
+  .offers__cards-wrapper__card__price-wrap .sale-price {
+    font-size: 16px;
+  }
+  .offers__cards-wrapper__card__info {
+    width: 100px;
+    font-size: 13px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .offers__cards-wrapper__card__title {
+    width: 100%;
+    max-width: 220px;
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 625px) {
+  .offers__cards-wrapper {
+    grid-template-columns: 1fr;
+  }
+}
+@media screen and (max-width: 576px) {
+  .offers__text-wrapper {
+    margin-top: 25px;
+  }
+  .offers__text-wrapper h1 {
+    font-size: 14px;
+  }
+  .offers__text-wrapper a {
+    font-size: 12px;
+  }
+  .offers__cards-wrapper__card {
+    padding: 0 0 8px;
   }
 }/*# sourceMappingURL=main.css.map */
