--- a/scss/main.css
+++ b/scss/main.css
@@ -706,7 +706,7 @@ body {
   padding: 35px 0 50px;
 }
 .popular__cards-wrapper__card {
-  height: 125px;
+  height: 115px;
   border: 1px solid #F2F2F2;
   padding: 20px 10px 20px 12px;
   border-radius: 5px;
@@ -718,16 +718,20 @@ body {
   padding-right: 100px;
 }
 .popular__cards-wrapper__card img {
-  width: 126px;
-  height: 120px;
+  width: 136px;
+  height: 130px;
   position: absolute;
-  top: -13px;
+  top: -8px;
   right: 0;
 }
 
 @media screen and (max-width: 1287px) {
   .popular__cards-wrapper__card__title {
     font-size: 16px;
+  }
+  .popular__cards-wrapper__card img {
+    width: 126px;
+    height: 120px;
   }
 }
 @media screen and (max-width: 1223px) {
@@ -764,6 +768,9 @@ body {
   .popular__cards-wrapper__card__title {
     font-weight: 500;
     font-size: 16px;
+  }
+  .popular__cards-wrapper__card img {
+    top: -12px;
   }
 }
 .sale {
@@ -881,6 +888,7 @@ body {
 }
 @media screen and (max-width: 450px) {
   .sale {
+    margin-top: 0;
     padding: 30px 0;
   }
 }/*# sourceMappingURL=main.css.map */
