--- a/scss/_popular.scss
+++ b/scss/_popular.scss
@@ -74,6 +74,9 @@
 
 @media screen and (max-width: 546px) {
     .popular {
+        &__title {
+            font-size: 14px;
+        }
         &__cards-wrapper {
             grid-template-columns: repeat(4, 1fr);
             overflow-y: hidden;
