--- a/scss/_offers.scss
+++ b/scss/_offers.scss
@@ -28,6 +28,7 @@
         margin-top: 40px;
         padding-bottom: 20px;
         &__card {
+            background: #fff;
             border: 1px solid #F2F2F2;
             padding: 16px 16px 10px;
             display: flex;
