--- a/scss/_breand.scss
+++ b/scss/_breand.scss
@@ -11,9 +11,13 @@
             color: $sub-info-color;
         }
         .breand-btns-wrap {
+            display: flex;
+            align-items: center;
+            gap: 20px;
             button {
                 border: none;
                 background: none;
+                cursor: pointer;
             }
         }
     }
