--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -422,7 +422,8 @@
     .header-bottom {
         .container {
             justify-content: center;
-            gap: 20px;
+            gap: 23px;
+            padding: 0;
         }
         &__search {
            margin-right: 0;
