--- a/scss/main.css
+++ b/scss/main.css
@@ -392,7 +392,8 @@ body {
   }
   .header-bottom .container {
     justify-content: center;
-    gap: 20px;
+    gap: 23px;
+    padding: 0;
   }
   .header-bottom__search {
     margin-right: 0;
