--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -433,7 +433,7 @@
             &__btn {
                 button {
                     padding: 7px 16px;
-                    border: 1px solid #ED3729;
+                    border: .5px solid #ED3729;
                 }
             }
         }
