--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -429,6 +429,7 @@
            margin-right: 0;
             &__input {
                 padding: 7px 2px;
+                flex: 1;
             }
             &__btn {
                 button {
