--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -429,7 +429,9 @@
            margin-right: 0;
             &__input {
                 padding: 7px 2px;
-                flex: 1;
+                &:focus {
+                    display: none;
+                }
             }
             &__btn {
                 button {
