--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -429,8 +429,10 @@
            margin-right: 0;
             &__input {
                 padding: 7px 2px;
-                &:focus {
-                    display: none;
+                input {
+                    &:focus {
+                        display: none;
+                    }
                 }
             }
             &__btn {
