--- a/scss/_offers.scss
+++ b/scss/_offers.scss
@@ -309,7 +309,8 @@
     .offers {
         &__text-wrapper {
             h1 {
-                font-size: 13px;
+                width: 180px;
+                font-size: 12px;
             }
             a {
                 font-size: 11px;
