--- a/scss/_offers.scss
+++ b/scss/_offers.scss
@@ -313,6 +313,7 @@
                 font-size: 12px;
             }
             a {
+                width: 130px;
                 font-size: 11px;
             }
             margin-top: 25px;
