--- a/scss/_offers.scss
+++ b/scss/_offers.scss
@@ -313,8 +313,9 @@
                 font-size: 12px;
             }
             a {
-                width: 150px;
+                width: 140px;
                 font-size: 11px;
+                color: red;
             }
             margin-top: 25px;
         }
