--- a/scss/_offers.scss
+++ b/scss/_offers.scss
@@ -309,13 +309,13 @@
     .offers {
         &__text-wrapper {
             h1 {
-                width: 180px;
+                width: 170px;
                 font-size: 12px;
             }
             a {
-                width: 140px;
+                width: 130px;
                 font-size: 11px;
-                color: red;
+                color: blue;
             }
             margin-top: 25px;
         }
