--- a/scss/main.css
+++ b/scss/main.css
@@ -705,13 +705,13 @@ body {
     margin-top: 25px;
   }
   .offers__text-wrapper h1 {
-    width: 180px;
+    width: 170px;
     font-size: 12px;
   }
   .offers__text-wrapper a {
-    width: 140px;
+    width: 130px;
     font-size: 11px;
-    color: red;
+    color: blue;
   }
   .offers__cards-wrapper__card {
     padding: 0 0 8px;
