--- a/scss/_offers.scss
+++ b/scss/_offers.scss
@@ -310,12 +310,12 @@
         &__text-wrapper {
             h1 {
                 width: 150px;
-                font-size: 12px;
+                font-size: 11px;
             }
             a {
                 width: 130px;
                 font-size: 11px;
-                color: blue;
+                color: red;
             }
             margin-top: 25px;
         }
