--- a/scss/main.css
+++ b/scss/main.css
@@ -706,12 +706,12 @@ body {
   }
   .offers__text-wrapper h1 {
     width: 160px;
-    font-size: 11px;
+    font-size: 12px;
   }
   .offers__text-wrapper a {
     width: 130px;
     font-size: 11px;
-    color: red;
+    color: #909090;
   }
   .offers__cards-wrapper__card {
     padding: 0 0 8px;
